--- a/homepage/templates/app.homepage.index.html
+++ b/homepage/templates/app.homepage.index.html
@@ -1,5 +1,5 @@
 {% verbatim %}
-<!-- <div class="container-fluid home_header">
+<div class="container-fluid home_header">
   <div class="col-md-4 col-md-offset-2 home_content">
     <h1 style="font-size:4em;font-weight:bold;"> Learn Anything </h1>
     <h3 style="font-size:2.4em;font-weight:lighter;font-family:sans-serif;line-height:1.2;">Get Access for Award Winning Online Courses</h3>
@@ -187,10 +187,10 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>
 
 <div class="container-fluid no_padding" style="margin:20px auto;padding-bottom:5rem;">
-  <div class="row"style="margin:0px;">
+  <div class="row" style="margin:0px;">
     <div class="col-md-12 no_padding course_contain_bg">
       <div class="col-md-12 course_contain_gradient">
         <div class="list_div row">
@@ -199,53 +199,29 @@
               <span class="heading_medium">Learn with these award winning courses</span>
             </div>
             <div class="col-md-10">
-              <div class="list row" id="drop0" data-toggle="collapse" ng-click="drop(0)"data-target="#col0">
-                <div class="col-md-10 col-xs-10">
-                  <h4> 01. Great Online Instructors</h4>
-                </div>
-                <div class="col-md-2 col-xs-2">
-                  <i class="fa fa-plus" aria-hidden="true"></i>
-                </div>
+              <div class="list container-fluid" id="drop0" data-toggle="collapse" ng-click="drop(0)" data-target="#col0">
+                <span class="list_title"> 01. Great Online Instructors</span><i class="fa fa-plus sym_plus"></i>
               </div>
-
               <div id="col0" class=" list_body collapse">
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                   labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</span>
               </div>
-              <div class="list row" id="drop1" data-toggle="collapse" ng-click="drop(1)"data-target="#col1">
-                <div class="col-md-10 col-xs-10">
-                  <h4> 02. Get Learny Certified Awards</h4>
-                </div>
-                <div class="col-md-2 col-xs-2">
-                  <i class="fa fa-plus" aria-hidden="true"></i>
-                </div>
+              <div class="list container-fluid" id="drop1" data-toggle="collapse" ng-click="drop(1)" data-target="#col1">
+                <span class="list_title"> 02. Get Learny Certified Awards</span><i class="fa fa-plus sym_plus"></i>
               </div>
-
               <div id="col1" class="list_body collapse">
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                   labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</span>
               </div>
-
-              <div class="list row" id="drop2" data-toggle="collapse" ng-click="drop(2)"data-target="#col2">
-                <div class="col-md-10 col-xs-10">
-                  <h4> 03.Exclusive Course Materials</h4>
-                </div>
-                <div class="col-md-2 col-xs-2">
-                  <i class="fa fa-plus" aria-hidden="true"></i>
-                </div>
+              <div class="list container-fluid" id="drop2" data-toggle="collapse" ng-click="drop(2)" data-target="#col2">
+                <span class="list_title"> 03.Exclusive Course Materials</span><i class="fa fa-plus sym_plus"></i>
               </div>
               <div id="col2" class="list_body collapse">
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                   labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</span>
               </div>
-
-              <div class="list row" id="drop3" data-toggle="collapse" ng-click="drop(3)"data-target="#col3">
-                <div class="col-md-10 col-xs-10">
-                  <h4> 04. In - depth Course Analysis</h4>
-                </div>
-                <div class="col-md-2 col-xs-2">
-                  <i class="fa fa-plus" aria-hidden="true"style=""></i>
-                </div>
+              <div class="list container-fluid" id="drop3" data-toggle="collapse" ng-click="drop(3)" data-target="#col3">
+                <span class="list_title"> 04. In - depth Course Analysis</span><i class="fa fa-plus sym_plus"></i>
               </div>
               <div id="col3" class="list_body collapse">
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
@@ -335,7 +311,7 @@
       <span class="heading_small" style="color:#fff;">JUST PICK WHAT YOU NEED TO LEARN</span>
     </div>
   </div>
-  <div class="container-fluid" style="min-height:40vh;position:absolute;top:247px;width:100%;left:auto;">
+  <div class="container-fluid pro_card_div">
     <div class="col-md-8 col-md-offset-2 min_padd">
       <div class="col-md-4">
         <div class="container-fluid pro_card">
@@ -378,7 +354,7 @@
     </div>
   </div>
 
-  <div class="container-fluid" style="min-height:55vh;position:relative;background-color:#FAFAFA;z-index:-88;">
+  <div class="container-fluid  pro_card_container">
     <img src="/static/images/24tut/4.png" class="bg on_left" width="15%">
     <img src="/static/images/24tut/3.png" class="bg on_right" width="15%">
     <div class="col-md-8 col-md-offset-2" style="margin-top:12%;">
@@ -398,26 +374,26 @@
 
 <div class="container-fluid no_padding" style="min-height:20vh;margin:20px auto;">
   <div class="col-md-12 no_padding">
-    <div class="col-md-6 text-center" style="background-color:#6A7EF1;color:#fff;min-height:13vh;padding-top:40px;">
+    <div class="col-md-6 text-center" style="background-color:#6A7EF1;color:#fff;min-height:13vh;padding-top:40px;padding-bottom:15px;">
       <span class="title">Get to Know what is best for you</span><br>
       <a href="#" class="links">View Categories</a>
     </div>
-    <div class="col-md-6 text-center" style="background-color:#02EBA3;color:#fff;min-height:13vh;padding-top:40px;">
+    <div class="col-md-6 text-center" style="background-color:#02EBA3;color:#fff;min-height:13vh;padding-top:40px;padding-bottom:15px;">
       <span class="title">Take a look at Popular Courses</span><br>
       <a href="#" class="links">View Collections</a>
     </div>
   </div>
 </div>
 
-<!-- <div class="container-fluid no_padding" style="min-height:50vh;margin:20px auto;">
+<div class="container-fluid no_padding" style="min-height:50vh;margin:20px auto;">
   <div class="col-md-12 text-center">
     <h1 class="heading_big">A New Era in Online Education</h1>
     <h4 class="heading_small"> CASE STUDIES FOR YOU</h4>
   </div>
   <div class="col-md-7 col-md-offset-3 min_padd">
     <div class="col-md-6 min_padd">
-      <div class="container-fluid " style="position:relative;">
-        <img src="/static/images/24tut/blue.png" style="position:absolute;top:75px;left:-35px;">
+      <div class="container-fluid no_padding" style="position:relative;">
+        <img src="/static/images/24tut/blue.png" style="position:absolute;top:75px;left:-35px;"class="hidden-xs hidden-sm">
         <img src="/static/images/24tut/liblue.png" style="position:absolute;top:-23px;right:24px;">
         <div class="onplay" style="background-image: url('/static/images/24tut/tutbg.jpg');">
           <div class="onplay_overlay" ng-click="">
@@ -433,8 +409,8 @@
       </div>
     </div>
     <div class="col-md-6 min_padd">
-      <div class="container-fluid" style="position:relative;">
-        <img src="/static/images/24tut/green.png" style="position:absolute;top:70px;left:-35px;">
+      <div class="container-fluid no_padding" style="position:relative;">
+        <img src="/static/images/24tut/green.png" style="position:absolute;top:70px;left:-35px;" class="hidden-xs hidden-sm">
         <img src="/static/images/24tut/orange.png" style="position:absolute;bottom:99px;right:-10px;">
         <div class="onplay" style="background-image: url('/static/images/24tut/img1.jpeg');">
           <div class="onplay_overlay" ng-click="">
@@ -450,6 +426,10 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>
+
+
+
+
 
 {% endverbatim %}
