--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -3,27 +3,28 @@
     <img src="/static/images/24tut/7.png" class="bg on_left" width="10%">
     <img src="/static/images/24tut/6.png" class="bg on_right" width="10%">
 
-    <div class="col-md-6 col-md-offset-3 text-center" style="margin-top:7%;">
+    <div class="col-md-6 col-md-offset-3 text-center" style="margin-top: 7%;">
       <h1 class="heading_big">Start a Journey. Enroll Now</h1>
       <h5 class="heading_small">Learn SOMETHING WHEREEVER YOU ARE</h5>
-      <div style="margin-left:40%;">
-        <button type="button" class=" btn_gradient">Join a Course Now</button>
+      <div class="foot_btn">
+        <button type="button" class="btn_gradient ">Join a Course Now</button>
       </div>
     </div>
   </div>
   <div class="container-fluid no_padding" style="min-height:20vh;margin:20px auto;">
     <div class="col-md-12 no_padding">
-      <div class="col-md-6 text-center" style="background-color:#02EBA3;color:#fff;min-height:13vh;padding-top:40px;">
+      <div class="col-md-6 text-center foo_bar">
         <span style="color: #fff;font-size: 1.4em;font-weight:bold;">Get hands on the <a href="#" class="linkline">Great Courses</a> you like </span><br>
       </div>
-      <div class="col-md-6 text-center" style="background-color:#02EBA3;color:#fff;min-height:13vh;padding-top:40px;">
-        <div class="container-fluid no_padding" style="width:50%">
+      <div class="col-md-6 text-center foo_bar">
+        <div class="container-fluid no_padding social_div">
           <span style="color: #fff;font-size: 1.4em;font-weight:bold;padding-right:20px;">Follow us on</span>
-          <i aria-hidden="true" class="social_links fa fa-facebook "></i>
-          <i aria-hidden="true" class="social_links fa fa-twitter"></i>
-          <i aria-hidden="true" class="social_links fa fa-google-plus "></i>
-          <i aria-hidden="true" class="social_links fa fa-instagram"></i>
-          <i aria-hidden="true" class="social_links fa fa-vimeo "></i>
+              <br class="hidden-lg hidden-md">
+            <i aria-hidden="true" class="social_links fa fa-facebook "></i>
+            <i aria-hidden="true" class="social_links fa fa-twitter"></i>
+            <i aria-hidden="true" class="social_links fa fa-google-plus "></i>
+            <i aria-hidden="true" class="social_links fa fa-instagram"></i>
+            <i aria-hidden="true" class="social_links fa fa-vimeo "></i>
         </div>
       </div>
     </div>
@@ -62,9 +63,9 @@
           <h5 class="text-muted">Copyright 2018.All Righst Reserved</h5>
         </div>
         <div class="col-md-4 col-md-offset-2">
-        <span class="text-muted"style="padding-right:20px;">Privacy Policy</span>
-        <span class="text-muted"style="border-right:1px solid #aaa;border-left:1px solid #aaa;padding-right:20px;padding-left:20px;"> Terms and Conditions</span>
-        <span class="text-muted"style="padding-left:20px;"> Refund Policy</span>
+          <span class="text-muted" style="padding-right:20px;">Privacy Policy</span>
+          <span class="text-muted" style="border-right:1px solid #aaa;border-left:1px solid #aaa;padding-right:20px;padding-left:20px;"> Terms and Conditions</span>
+          <span class="text-muted" style="padding-left:20px;"> Refund Policy</span>
         </div>
       </div>
     </div>
