--- a/HR/templates/loginCopy.html
+++ b/HR/templates/loginCopy.html
@@ -35,7 +35,7 @@
 
 
       <label for="username" class="sr-only">Mobile Number</label>
-      <input id="username" name="username" type="text" maxlength="10" class="form-control" placeholder="Mobile Number/Username" required autofocus>
+      <input id="username" name="username" type="text" class="form-control" placeholder="Mobile Number/Username" required autofocus>
       <label for="password" class="sr-only">Password</label>
       <input id="password" name="password" type="password" class="form-control" placeholder="Password" required>
       <button id="signIn" style="margin-bottom:20px; margin-top:10px;" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
