--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -1119,6 +1119,7 @@
     width: 100%;
     padding: 12px 18px;
     text-align: left;
+     border-style:none;
   }
   .custom-btn .caret {
     right: 3em;
