--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -3,7 +3,7 @@
     <img src="/static/images/24tut/7.png" class="bg on_left" width="10%">
     <img src="/static/images/24tut/6.png" class="bg on_right" width="10%">
 
-    <div class="col-md-6 col-md-offset-3 text-center" style="margin-top: 7%;">
+    <div class="col-md-6 col-md-offset-3 text-center foo_heading">
       <h1 class="heading_big">Start a Journey. Enroll Now</h1>
       <h5 class="heading_small">Learn SOMETHING WHEREEVER YOU ARE</h5>
       <div class="foot_btn">
