--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -53,7 +53,7 @@
           <ul ng-mouseleave="keepshow[3]=false" ng-click="keepshow[3] = false; toggleNavbar = false;" ng-mouseover="keepshow[3]=true" ng-show="show[3]||keepshow[3]" class="container_box">
             <li><a href="/enroll">Enroll</a></li>
             <li><a href="/about">About 24Tutors</a></li>
-            <li><a href="/about">Our Testimonials</a></li>
+            <li><a href="/students">Students</a></li>
             <li><a href="/about">Contact Us</a></li>
           </ul>
         </li>
