--- a/ecommerce/templates/app.ecommerce.emailDetail.html
+++ b/ecommerce/templates/app.ecommerce.emailDetail.html
@@ -261,7 +261,7 @@
                 Quantity
               </th>
               <th width="100" align="center">
-                Price {{isStoreGlobal}}
+                Price
               </th>
               {% if isStoreGlobal == False %}
               <th width="100" align="center">
