--- a/homepage/templates/app.homepage.index.html
+++ b/homepage/templates/app.homepage.index.html
@@ -372,7 +372,7 @@
 </div>
 
 
-<div class="container-fluid no_padding" style="min-height:20vh;margin:20px auto;">
+<div class="container-fluid no_padding" style="min-height:20vh;">
   <div class="col-md-12 no_padding">
     <div class="col-md-6 text-center" style="background-color:#6A7EF1;color:#fff;min-height:13vh;padding-top:40px;padding-bottom:15px;">
       <span class="title">Get to Know what is best for you</span><br>
