--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -34,17 +34,17 @@
       <div class="col-md-4 col-sm-6 footer">
         <ul class="folist">
           <h4 class="text-muted">Links</h4>
-          <li><a href="/impliment">Courses</a></li>
-          <li><a href="/remote">Tutors</a></li>
-          <li><a href="/training">Quiz & Tests </a></li>
+          <li><a href="">Courses</a></li>
+          <li><a href="">Tutors</a></li>
+          <li><a href="">Quiz & Tests </a></li>
         </ul>
       </div>
       <div class="col-md-4 col-sm-6 footer">
         <ul class="folist">
           <h4 class="text-muted">Company</h4>
           <li><a href="/about">About US</a></li>
-          <li><a href="/career">Talk To Us</a></li>
-          <li><a href="/contact_us">Help</a></li>
+          <li><a href="/contact">Talk To Us</a></li>
+          <li><a href="">Help</a></li>
 
         </ul>
       </div>
