--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -5,6 +5,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{BRAND_NAME}} Care</title>
+    <!-- <link rel="icon" type="image/jpg" href="https://www.gettyimages.in/gi-resources/images/Embed/new/embed2.jpg"> -->
     <meta name="viewport" content="initial-scale=1">
     <!-- stock css libraries -->
 
@@ -223,6 +224,7 @@
       <script src="{% static '/js/web-notification.js' %}"></script>
       <script src="{% static '/js/angular-web-notification.js' %}"></script>
       <script src="{% static 'js/angular-chart.min.js' %}"></script>
+      <script src="{% static 'js/angular-tinycon.js' %}"></script>
 
 
       <!-- <script src="{% static 'js/MathJax.js' %}"></script> -->
