--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -11,7 +11,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid no_padding" style="min-height:20vh;">
+  <div class="container-fluid no_padding" style="min-height:13vh;">
     <div class="col-md-12 no_padding">
       <div class="col-md-6 text-center foo_bar">
         <span style="color: #fff;font-size: 1.4em;font-weight:bold;">Get hands on the <a href="#" class="linkline">Great Courses</a> you like </span><br>
@@ -19,16 +19,67 @@
       <div class="col-md-6 text-center foo_bar">
         <div class="container-fluid no_padding social_div">
           <span style="color: #fff;font-size: 1.4em;font-weight:bold;padding-right:20px;">Follow us on</span>
-              <br class="hidden-lg hidden-md">
-            <i aria-hidden="true" class="social_links fa fa-facebook "></i>
-            <i aria-hidden="true" class="social_links fa fa-twitter"></i>
-            <i aria-hidden="true" class="social_links fa fa-google-plus "></i>
-            <i aria-hidden="true" class="social_links fa fa-instagram"></i>
-            <i aria-hidden="true" class="social_links fa fa-vimeo "></i>
+          <br class="hidden-lg hidden-md">
+          <i aria-hidden="true" class="social_links fa fa-facebook "></i>
+          <i aria-hidden="true" class="social_links fa fa-twitter"></i>
+          <i aria-hidden="true" class="social_links fa fa-google-plus "></i>
+          <i aria-hidden="true" class="social_links fa fa-instagram"></i>
+          <i aria-hidden="true" class="social_links fa fa-vimeo "></i>
         </div>
       </div>
     </div>
   </div>
+  <div class="container-fluid no_padding" style="min-height:30vh;background-color:#222222;padding-top:15px;">
+    <div class="col-md-10 col-md-offset-1">
+      <div class="nc_links col-md-3">
+        <ul class="list-unstyled">
+          <h4 class="text-muted"><b>NCERT Solutions</b></h4>
+          <li><a href="">NCERT Class 12 Maths Solutions</a></li>
+          <li><a href="">NCERT Class 12 Physics Solutions</a></li>
+          <li><a href="">NCERT Class 12 Chemistry Solutions</a></li>
+          <li><a href="">NCERT Class 12 Biology Solutions</a></li>
+          <li><a href="">NCERT Class 11 Maths Solutions</a></li>
+          <li><a href="">NCERT Class 11 Physics Solutions</a></li>
+        </ul>
+      </div>
+      <div class="nc_links col-md-3">
+        <ul class="list-unstyled">
+          <h4 class="text-muted"><b>NCERT Solutions</b></h4>
+          <li><a href="">NCERT Class 11 Chemistry Solutions</a></li>
+          <li><a href="">NCERT Class 11 Biology Solutions</a></li>
+          <li><a href="">NCERT Class 10 Maths Solutions</a></li>
+          <li><a href="">NCERT Class 10 Science Solutions</a></li>
+          <li><a href="">NCERT Class 9 Maths Solutions</a></li>
+          <li><a href="">NCERT Class 9 Science Solutions</a></li>
+        </ul>
+      </div>
+      <div class="nc_links col-md-3">
+        <ul class="list-unstyled">
+          <h4 class="text-muted"><b>Text Book Solutions</b></h4>
+          <li><a href="">NCERT Solutions</a></li>
+          <li><a href="">RD Sharma Class 10 Solutions</a></li>
+          <li><a href="">RD Sharma Class 9 Solutions</a></li>
+          <li><a href="">RS Aggarwal Class 10 Solutions</a></li>
+          <li><a href="">HC Verma Solutions</a></li>
+          <li><a href="">ICSE Class 10 Solutions</a></li>
+        </ul>
+      </div>
+      <div class="nc_links col-md-3">
+        <ul class="list-unstyled">
+          <h4 class="text-muted"><b>Question Papers</b></h4>
+          <li><a href="">Previous Year Question Paper </a></li>
+          <li><a href="">CBSE Previous Year Paper for class 10 </a></li>
+          <li><a href="">CBSE Previous Year Paper for class 12 </a></li>
+          <li><a href="">CBSE Class 12 Sample Papers</a></li>
+          <li><a href="">CBSE Class 10 Sample Papers</a></li>
+          <li><a href="">ICSE Class 10 Sample Papers</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
+
   <div style="padding-left:10%;padding-right:10%">
     <div class="col-md-8 col-md-offset-2" style="margin-bottom:20px;border-bottom:1px solid #ddd;padding-bottom:35px;">
       <div class="col-md-4 col-sm-6 footer">
