--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -44,7 +44,7 @@
         <li class="header_element">
           <a href="" ng-mouseleave="show[2]=false" ng-mouseover="show[2]=true" class="nav_ele"> Study Material</a>
           <ul ng-mouseleave="keepshow[2]=false" ng-click="keepshow[2] = false; toggleNavbar = false;" ng-mouseover="keepshow[2]=true" ng-show="show[2]||keepshow[2]" class="container_box">
-            <li><a href="">NCERT Solutions</a></li>
+            <li><a href="/ncert">NCERT Solutions</a></li>
             <li><a href="">Previous Year Papers</a></li>
             <li><a href="">Mock Tests</a></li>
             <li><a href="">Sample Papers</a></li>
