--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -880,6 +880,7 @@
   border-radius: 10px;
   width: 90%;
 }
+
 .topleft {
   position: absolute;
   top: 0px;
@@ -894,22 +895,25 @@
   right: 50px;
   display: none;
 }
+
 .service_items:hover {
   background-color: #fff;
   border-top-left-radius: 44px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
 }
-.service_items:hover .topleft{
+
+.service_items:hover .topleft {
   display: block;
-}
-.service_items:hover .btmright{
-  display: block;
-}
-.serv_row{
-  padding-left: 22px;
-  padding-top:15px;
 }
 
+.service_items:hover .btmright {
+  display: block;
+}
+
+.serv_row {
+  padding-left: 22px;
+  padding-top: 15px;
+}
 
 /* ------------ */
 .top {
@@ -1077,6 +1081,26 @@
   width: 1em;
   margin-left: -1em;
 }
+.courses1 ul {
+  margin-top: 2em;
+  list-style-type: none;
+}
+
+.courses1 ul li {
+  font-size: 20px;
+  color: #fff;
+  margin-left: -2em;
+}
+
+.courses1 ul li::before {
+  font-size: 20px;
+  color: #03AFFE;
+  content: "\2022";
+  font-weight: bolder;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
 
 .courses ul li span {
   color: #fff;
@@ -1237,72 +1261,284 @@
 }
 
 .movie-card {
-  margin-top:2em;
+  margin-top: 2em;
   width: 95%;
   min-height: 300px;
-  border-radius: 20px;
-  -webkit-box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  /* -webkit-box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.1); */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15);
 }
 
-#circle {
+.circle {
   width: 60px;
   height: 60px;
-  border-radius: 64px;
+  border-radius: 30px;
   border: 2px solid #A9A9A9;
   background-color: #fff;
   position: absolute;
   top: 0%;
   left: 35%;
   color: #A9A9A9;
+  z-index: 99;
 }
 
-#circle div {
+.circleright {
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
+  border: 2px solid #A9A9A9;
+  background-color: #fff;
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  color: #A9A9A9;
+  z-index: 99;
+}
+
+.colorcircle {
+  width: 130px;
+  height: 130px;
+  border-radius: 65px;
+  /* border: 2px solid #A9A9A9; */
+  background-color: #FFD119;
+  position: absolute;
+  top: 47%;
+  left: 34%;
+}
+
+.movie-card:hover .colorcircle {
+  width: 130px;
+  height: 130px;
+  border-radius: 65px;
+  /* border: 2px solid #A9A9A9; */
+  background-color: #FFD119;
+  position: absolute;
+  top: 47%;
+  left: 34%;
+}
+
+.colorcircle1 {
+  width: 130px;
+  height: 130px;
+  border-radius: 65px;
+  /* border: 2px solid #A9A9A9; */
+  background-color: #FDDDF5;
+  position: absolute;
+  top: 47%;
+  left: 40%;
+  z-index: 1;
+}
+
+.movie-card:hover .colorcircle1 {
+  width: 130px;
+  height: 130px;
+  border-radius: 65px;
+  /* border: 2px solid #A9A9A9; */
+  background-color: #FDDDF5;
+  position: absolute;
+  top: 47%;
+  left: 40%;
+}
+
+.circle div {
   position: relative;
   top: 30%;
   left: -25%;
   width: 90px;
   height: 90px;
-  font-size:18px;
+  font-size: 18px;
   text-align: center;
+  z-index: 99;
 }
 
-.movie-card:hover #circle{
+.circleright div {
+  position: relative;
+  top: 30%;
+  left: -25%;
+  width: 90px;
+  height: 90px;
+  font-size: 18px;
+  text-align: center;
+  z-index: 99;
+}
+
+.movie-card:hover .circle {
   background-color: #01EDA5;
   border: 2px solid #fff;
-  color:#fff;
+  color: #fff;
 }
 
+.movie-card:hover .circleright {
+  background-color: #01EDA5;
+  border: 2px solid #fff;
+  color: #fff;
+}
 
 .studentcard {
-  border-radius: 20px 0 0 20px;
+  border-radius: 10px 0 0 10px;
+  z-index: 1;
+}
+
+.studentcard1 {
+  border-radius: 0 10px 10px 0;
+  z-index: 1;
+}
+
+.carddesign {
+  z-index: 99;
+  text-align: right;
+}
+
+.movie-card:hover .studentcard {
+  z-index: 0;
+}
+
+.movie-card:hover .studentcard1 {
+  z-index: 0;
 }
 
 .stucardtext {
-  margin-top: 8em;
+  margin-top: 5em;
 }
 
+.stucardtext1 {
+  margin-top: 5em;
+  z-index: 0;
+}
+
+.stublock {
+  position: relative;
+}
+
+.viewstudent {
+  position: absolute;
+  top: -2em;
+  right: 6em;
+  display: none;
+}
+
+.stublock:hover .viewstudent {
+  display: block;
+}
+
+.stuhead {
+  color: #fff;
+  font-size: 3em;
+  font-weight: bolder;
+  position: relative;
+}
+
+.line-u {
+  position: absolute;
+  left: 47.5%;
+}
+
+.video-border {
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  background-color: #fff;
+  margin-top: 3em;
+  position: relative;
+}
+
+/* .video-border {
+  display: flex;
+  width: 100px;
+  height: 100px;
+  border: double 4px transparent;
+  border-radius: 50px;
+  background-image: linear-gradient(#05E7A7, #687FEF), radial-gradient(circle at top left, #687FEF, #29C0C2);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  margin-top:3em;
+  position:relative;
+  background-color: #fff;
+} */
 @media only screen and (max-width:768px) {
 
   /* mobile display size starts here.... */
   /* students */
-  #circle {
+  .courses1 ul li {
+    font-size: 17px;
+    color: #fff;
+    margin-left: -2em;
+  }
+
+  .courses1 ul li::before {
+    font-size: 17px;
+    color: #03AFFE;
+    content: "\2022";
+    font-weight: bolder;
+    display: inline-block;
+    width: 1em;
+    margin-left: -1em;
+  }
+  .video-border {
+    margin-left: 33%;
+  }
+
+  .line-u {
+    position: absolute;
+    left: 38%;
+    padding-top: 1em;
+  }
+
+  .stuhead {
+    color: #fff;
+    font-size: 2em;
+    font-weight: bolder;
+    position: relative;
+  }
+
+  .viewstudent {
+    position: absolute;
+    top: -2em;
+    right: 3.6em;
+    display: none;
+  }
+
+  .circle {
     width: 60px;
     height: 60px;
-    border-radius: 64px;
+    border-radius: 30px;
     border: 2px solid #A9A9A9;
     background-color: #fff;
     position: absolute;
-    top: 51%;
+    top: 54%;
     left: 40%;
   }
 
+  .circleright {
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+    border: 2px solid #A9A9A9;
+    background-color: #fff;
+    position: absolute;
+    top: 35%;
+    left: 40%;
+  }
+
+  .colorcircle, .colorcircle1 {
+    display: none;
+  }
+
   .studentcard {
-    border-radius: 20px 20px 0 0;
+    border-radius: 10px 10px 0 0;
   }
 
   .movie-card {
     width: 100%;
+  }
+
+  .carddesign {
+    text-align: left;
+  }
+
+  .mobilepadd {
+    padding-top: 2em;
   }
 
   .stucardtext {
@@ -1648,6 +1884,7 @@
     left: 49px;
     top: 24px;
   }
+
   .btmright {
     bottom: 0px;
     right: 46px;
@@ -1732,6 +1969,7 @@
   .btmright {
     right: 51px;
   }
+
   /* iphone screen size ends here */
 }
 
