--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -4,8 +4,9 @@
 <html ng-app="app" ng-controller="main" id="main">
   <head>
     <meta charset="utf-8">
+    <!-- <link rel="icon" type="image/jpg" href="https://www.syrow.com/wp-content/themes/Divi/images/favicon-32x32.png"> -->
+    <link rel="icon" type="image/jpg" href="{{BRAND_LOGO}}">
     <title>{{BRAND_NAME}} Care</title>
-    <!-- <link rel="icon" type="image/jpg" href="https://www.gettyimages.in/gi-resources/images/Embed/new/embed2.jpg"> -->
     <meta name="viewport" content="initial-scale=1">
     <!-- stock css libraries -->
 
@@ -274,6 +275,7 @@
     <script src="{% static 'js/custom/services.js' %}"></script>
     <script src="{% static 'js/chart.funnel.bundled.min.js' %}"></script>
     <script src="{% static 'js/gauge.min.js' %}"></script>
+    <script src="{% static 'js/tinycon.js' %}"></script>
 
 
 
